test/files/neg/sabin2.check
sabin2.scala:22: error: type mismatch;
 found   : Test.Base#T
 required: _1.T where val _1: Test.Base
   a.set(b.get()) // Error
              ^
one error found
